2007-03-15	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Added interrupt counting to tl880int.c.
	* Added interrupt status variables to tl880.h for MCU interrupts.
	* No longer disable TSD interrupts when receiving one.
	* Added DMA memory offset registers to tl880doc.txt (thanks to the PCI
	  traces provided by Stephen Marchang).
	* Added report of DMA offset to /proc/tl880.

2007-02-18	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Implemented more APU initialization.
	* Small updates to the chip documentation.

2007-01-31	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Started working on more VPX initialization.

2007-01-29	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Added a status dump IOCTL.
	* Tweak implementation of /proc interface.

2007-01-28	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Check the (usually useless) return value of request_module.
	* Change i2c init to try to access more possible i2c buses on unknown
	  card types.
	* Add __init back to tl880_init() in tl880_kern.c.
	* Improve/alter some error messages.
	* Added tl880_i2c_read/write_* functions to tl880i2c.c.
	* Removed tl880ni2c.c declarations from tl880.h.
	* Added VPX control functions in tl880vpx.c and made use of them.
	* Reordered the initialization process to put i2c init before card
	  init, and card init after IRQ allocation.

2007-01-22	Mike Bourgeous		<i_am_nitrogen at hotmail.com>
	
	* Fixed interrupts.
	* Added another bit of documentation to register 10008.
	* Changed tl880_mkdev script to fix chown/chmod.
	* Compilation changes for 2.6.19 (may have broken earlier versions).
	* Fixed compilation on pre-2.6.19 kernels.
	* Added ioctl tool and testioctl.sh test script.
	* Changed ioctl behavior to pass unknown values to i2c clients.
	* Removed an unnecessary forward declaration.

2007-01-20	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Removed __init from interrupt handlers.
	* Check some __must_check values.
